aggiunti cerchietti collegati all'immagine

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
                 </div>
                 <div class="images">
                     <img :src="immagine[posizione_immagine]" alt="">
+                    <div class="circles">
+                        <i v-for="(img, posizione) in immagine"
+                            v-bind:class="posizione == posizione_immagine ? 'active' : 'null'"
+                            class="fas fa-circle"></i>
+                    </div>
                 </div>
                 <div class="next">
                     <i @click="immagine_successiva" class="fas fa-arrow-right fa-2x"></i>
